--- a/Ansible/win_test.yml
+++ b/Ansible/win_test.yml
@@ -11,3 +11,5 @@
   tasks:
   - name: Test commands on windows
     win_ping:
+
+#ansible -i /home/ansible/hosts all -m win_ping -e="ansible_ssh_port=5986, ansible_connection=winrm" -vvv
