adding Nov-Dev-15th

--- a/Ansible/gsutil_install.yml
+++ b/Ansible/gsutil_install.yml
@@ -31,3 +31,6 @@
         state: latest
       register: gc_sdk
     - debug:  msg={{gc_sdk.stdout_lines}}
+    
+DUCHWVVWHGVVHXWVEL
+DQ4EJXYJQPDGYQYYMV
