--- a/CouldFormation/Network_VPC_creation.yaml
+++ b/CouldFormation/Network_VPC_creation.yaml
@@ -207,9 +207,14 @@ Resources:
     Properties:
       RouteTableId: !Ref PrivateRouteTable
       SubnetId: !Ref PrivateDBSubnet2
+
 Outputs:
   VpcID:
     Value: !Ref VPC
+    Description: VPC id
+    Export:
+      Name:
+        Fn::Sub: "${AWS::StackName}-VPCID"
 
   PublicSubnets:
     Description: A list of the public subnets
@@ -222,23 +227,41 @@ Outputs:
   PublicSubnet1:
     Description: A reference to the public subnet in the 1st Availability Zone
     Value: !Ref PublicSubnet1
+    Export:
+      Name:
+        Fn::Sub: "${AWS::StackName}-PubSub1"
 
   PublicSubnet2:
     Description: A reference to the public subnet in the 2nd Availability Zone
     Value: !Ref PublicSubnet2
+    Export:
+      Name:
+        Fn::Sub: "${AWS::StackName}-PubSub2"
 
   PrivateMiddSubnet1:
     Description: A reference to the private subnet in the 1st Availability Zone
     Value: !Ref PrivateMiddSubnet1
+    Export:
+      Name:
+        Fn::Sub: "${AWS::StackName}-PvtMid1"
 
   PrivateMiddSubnet2:
     Description: A reference to the private subnet in the 2nd Availability Zone
     Value: !Ref PrivateMiddSubnet2
+    Export:
+      Name:
+        Fn::Sub: "${AWS::StackName}-PvtMid2"
 
   PrivateDBSubnet1:
     Description: A reference to the private subnet in the 1st Availability Zone
     Value: !Ref PrivateDBSubnet1
+    Export:
+      Name:
+        Fn::Sub: "${AWS::StackName}-PvtDB1"
 
   PrivateDBSubnet2:
     Description: A reference to the private subnet in the 2nd Availability Zone
     Value: !Ref PrivateDBSubnet2
+    Export:
+      Name:
+        Fn::Sub: "${AWS::StackName}-PvtDB2"
